--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
   <フッター>
     <div class="コンテナ">
       <img src="https://prog-8.com/images/html/advanced/footer_logo.png">
-      <p>コーディングを学び、クリエイティブになることを学びましょう。</p>
+      <p>コーディンクリエイティブになることを学びましょう。</p>
     </div>
   </フッター>
 </body>
